@@ -1,3 +1,7 @@
+2014-08-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>
+
+	* site.exp: Ensure that HOSTCC and HOSTCFLAGS are set.
+
 2014-07-24  Anton Kolesov  <Anton.Kolesov@synopsys.com>
 
 	* build-uclibc.sh: Do not use temporary dir for stage 1 toolchain.
